[package]
name = "geocode-csv"
version = "0.1.0"
authors = ["Michael Eckert <meckert@salesforce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
structopt = "0.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_urlencoded = "0.6.1"
serde_json = "1.0.46"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
